--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -34,11 +34,13 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("materialize-red", "lighten-2") !default;
+$primary-color: color("indigo", "lighten-1") !default;
+//$primary-color: color("materialize-red", "lighten-2") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("teal", "lighten-1") !default;
+$secondary-color: color("indigo", "base") !default;
+//$secondary-color: color("teal", "lighten-1") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
@@ -100,7 +102,8 @@ $button-floating-radius: 50% !default;
 // ==========================================================================
 
 $card-padding: 24px !default;
-$card-bg-color: #fff !default;
+//$card-bg-color: #fff !default;
+$card-bg-color: color("discord", "not-black") !default;
 $card-link-color: color("orange", "accent-2") !default;
 $card-link-color-light: lighten($card-link-color, 20%) !default;
 
@@ -334,8 +337,11 @@ $interval-size: $range / $intervals !default;
 // 23. Collections
 // ==========================================================================
 
-$collection-border-color: #e0e0e0 !default;
-$collection-bg-color: #fff !default;
+//$collection-border-color: #e0e0e0 !default;
+$collection-border-color: color("discord", "dark-not-black") !default;
+//$collection-bg-color: #fff !default;
+$collection-bg-color: color("discord", "dark-not-black") !default;
+$collection-bg-even-color: color("discord", "greyple") !default;
 $collection-active-bg-color: $secondary-color !default;
 $collection-active-color: lighten($secondary-color, 55%) !default;
 $collection-hover-bg-color: #ddd !default;
