--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2365,7 +2365,7 @@ td, th {
   overflow: hidden;
   position: relative; }
   .collection .collection-item {
-    background-color: #2C2F33;
+    background-color: #23272A;
     line-height: 1.5rem;
     padding: 10px 20px;
     margin: 0;
@@ -2413,7 +2413,7 @@ td, th {
     .collection a.collection-item:not(.active):hover {
       background-color: #ddd; }
   .collection.with-header .collection-header {
-    background-color: #2C2F33;
+    background-color: #23272A;
     border-bottom: 1px solid #2C2F33;
     padding: 10px 20px; }
   .collection.with-header .collection-item {
