--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -340,7 +340,7 @@ $interval-size: $range / $intervals !default;
 //$collection-border-color: #e0e0e0 !default;
 $collection-border-color: color("discord", "dark-not-black") !default;
 //$collection-bg-color: #fff !default;
-$collection-bg-color: color("discord", "dark-not-black") !default;
+$collection-bg-color: color("discord", "not-black") !default;
 $collection-bg-even-color: color("discord", "greyple") !default;
 $collection-active-bg-color: $secondary-color !default;
 $collection-active-color: lighten($secondary-color, 55%) !default;
