Add discord body color

--- a/sass/components/_color-variables.scss
+++ b/sass/components/_color-variables.scss
@@ -335,7 +335,8 @@ $discord: (
   "full-white":     #FFFFFF,
   "greyple":        #99AAB5,
   "dark-not-black": #2C2F33,
-  "not-black":      #23272A
+  "not-black":      #23272A,
+  "body":           #36393f
 );
 
 $colors: (
